Camlp4s Version 4.01:
---------------------

* [27 Apr 07] Added compatibility with ocaml 3.11

Camlp4s Version 4.00:
---------------------

* [31 Jan 07] Added a new syntax, "lexer", to write parsers of characters
  in a shorter way. New syntax extension "pa_lex.cmo".

* [26 Jan 07] Deleted "LOCATE" lexing token kind and associated parsing
  stuff. Seems to be an old thing never used.

* [20 Jan 07] Added "lookahead" stream pattern component kind.
          syntax ::= "?=" list lookhd_patt sep_by "|"
     lookhd_patt ::= "[" list pattern sep_by ";" "]"
  Checks the first stream elements against the pattern, without removing
  them from the stream (but possibly unfreezing them), continues the stream
  pattern if ok, fails (Stream.Failure or Stream.Error depending on the
  position of the component) if not. If there are more than one lookahead
  pattern, they must be of the same length. Examples in lib/plexer.ml.

* [31 Dec 06] Added the ability to add "!" (in Revised syntax) or "?!"
  (in normal syntax) after a stream parser component to hint the preprocessor
  that the called parser cannot fail (which must be true, but not checked)
  which allows shorter code. E.g.
     parser [: x = f; y = g ! :] -> (x, y)
  This example is equivalent to:
     parser [: x = f; s :] -> let y = g s in (x, y)

* [19 Dec 06] Added "pa_pragma.cmo" adding the directive "#pragma <expr>"
  which executes <expr> in the context of the preprocessor.

* [16 Dec 06] Added ability to add directives: "Pcaml.add_directive".

* [05 Dec 06] Fixed old bug: "camlp4 foo/bar.cmo" now searchs from the
  current directory (i.e in its subdirectory "foo"), instead of searching
  in the path. Before, we had to write "camlp4 ./foo/bar.cmo".

* [01 Dec 06] In "pa_macro.cmo", the expression after IFDEF can use
  the infix operators OR and AND, the prefix one NOT and expressions
  between parentheses.

* [01 Dec 06] The same distribution can compile with several versions